# libadwaita-rs

./: .gitignore  .gitlab-ci.yml  Adw-1.gir  README.md
.github/workflows/: quickstart.yml
libadwaita/: Cargo.toml  Gir.toml
libadwaita/examples/: hello-world.rs
libadwaita/src/: adaptive_condition.rs  application.rs  builders.rs  callback_animation_target.rs  combo_row.rs  lib.rs  message_dialog.rs  prelude.rs  toast.rs
libadwaita/src/auto/: about_window.rs  action_row.rs  adaptive_condition.rs  adaptive_state.rs  animation.rs  application.rs  application_window.rs  avatar.rs  banner.rs  bin.rs  browsing_view.rs  browsing_view_child.rs  button_content.rs  callback_animation_target.rs  carousel.rs  carousel_indicator_dots.rs  carousel_indicator_lines.rs  clamp.rs  clamp_layout.rs  clamp_scrollable.rs  combo_row.rs  constants.rs  dual_pane_view.rs  entry_row.rs  enum_list_item.rs  enum_list_model.rs  enum_value_object.rs  enums.rs  expander_row.rs  flags.rs  flap.rs  functions.rs  header_bar.rs  header_group.rs  header_group_child.rs  keypad.rs  leaflet.rs  leaflet_page.rs  message_dialog.rs  mod.rs  (+35 more)
libadwaita/src/subclass/: action_row.rs  application.rs  application_window.rs  bin.rs  combo_row.rs  expander_row.rs  message_dialog.rs  mod.rs  preferences_group.rs  preferences_page.rs  preferences_row.rs  preferences_window.rs  swipeable.rs  window.rs
libadwaita/sys/: Cargo.toml  Gir.toml  build.rs
libadwaita/sys/src/: lib.rs
libadwaita/sys/tests/: abi.rs  constant.c  layout.c
subprojects/: libadwaita.wrap
