[package]
name = "libadwaita"
version = "0.2.0"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
edition = "2021"
readme = "../README.md"
homepage = "https://world.pages.gitlab.gnome.org/Rust/libadwaita-rs/"
description = "Rust bindings for libadwaita"
license = "MIT"
repository = "https://gitlab.gnome.org/World/Rust/libadwaita-rs"
documentation = "https://world.pages.gitlab.gnome.org/Rust/libadwaita-rs/stable/latest/docs/libadwaita"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "gnome", "adwaita", "GUI"]

[lib]
name = "libadwaita"

[features]
dox = []
gtk_v4_2 = []
gtk_v4_4 = ["gtk_v4_2"]
gtk_v4_6 = ["gtk_v4_4"]

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = '0.2'
once_cell = "1.8"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gdk-pixbuf]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.pango]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gdk]
package = "gdk4"
git = "https://github.com/gtk-rs/gtk4-rs"

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"

[dependencies.ffi]
package = "libadwaita-sys"
path = './sys'
version = "0.2.0"
