[package]
name = "libadwaita"
version = "0.3.1"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
edition = "2021"
readme = "../README.md"
homepage = "https://world.pages.gitlab.gnome.org/Rust/libadwaita-rs/"
description = "Rust bindings for libadwaita"
license = "MIT"
repository = "https://gitlab.gnome.org/World/Rust/libadwaita-rs"
documentation = "https://world.pages.gitlab.gnome.org/Rust/libadwaita-rs/stable/latest/docs/libadwaita"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "gnome", "adwaita", "GUI"]

[lib]
name = "libadwaita"

[features]
dox = [
    "glib/dox",
    "gio/dox",
    "gdk-pixbuf/dox",
    "pango/dox",
    "gdk/dox",
    "gtk/dox",
    "ffi/dox",
]
gtk_v4_2 = []
gtk_v4_4 = ["gtk_v4_2"]
gtk_v4_6 = ["gtk_v4_4"]
v1_1 = ["ffi/v1_1"]
v1_2 = ["v1_1", "ffi/v1_2"]
v1_3 = ["v1_2", "ffi/v1_3"]

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
bitflags = '1.0'
libc = '0.2'
once_cell = "1.8"
futures-channel = "0.3"

[dependencies.glib]
version = "0.17"

[dependencies.gio]
version = "0.17"

[dependencies.gdk-pixbuf]
version = "0.17"

[dependencies.pango]
version = "0.17"

[dependencies.gdk]
package = "gdk4"
version = "0.6"

[dependencies.gtk]
package = "gtk4"
version = "0.6"

[dependencies.ffi]
package = "libadwaita-sys"
path = './sys'
version = "0.3.0"
