[package]
name = "libadwaita-sys"
version = "0.1.0-alpha-6"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
edition = "2018"
build = "build.rs"
links = "libadwaita-1"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "gnome", "adwaita", "GUI"]
description = "FFI bindings for libadwaita"
license = "MIT"
homepage = "https://world.pages.gitlab.gnome.org/Rust/libadwaita-rs/"
repository = "https://gitlab.gnome.org/World/Rust/libadwaita-rs"
documentation = "https://world.pages.gitlab.gnome.org/Rust/libadwaita-rs/stable/latest/docs/libadwaita_sys"
[package.metadata.system-deps.libadwaita_1]
name = "libadwaita-1"
version = "1"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "libadwaita_sys"

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gtk-sys]
package = "gtk4-sys"
git = "https://github.com/gtk-rs/gtk4-rs"

[dependencies.gdk-sys]
package = "gdk4-sys"
git = "https://github.com/gtk-rs/gtk4-rs"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
