[package]
name = "libadwaita-sys"
version = "0.2.1"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
edition = "2021"
build = "build.rs"
links = "libadwaita-1"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "gnome", "adwaita", "GUI"]
description = "FFI bindings for libadwaita"
license = "MIT"
homepage = "https://world.pages.gitlab.gnome.org/Rust/libadwaita-rs/"
repository = "https://gitlab.gnome.org/World/Rust/libadwaita-rs"
documentation = "https://world.pages.gitlab.gnome.org/Rust/libadwaita-rs/stable/latest/docs/libadwaita_sys"
[package.metadata.system-deps.libadwaita_1]
name = "libadwaita-1"
version = "1"

[package.metadata.system-deps.libadwaita_1.v1_1]
version = "1.1"

[package.metadata.system-deps.libadwaita_1.v1_2]
version = "1.2"

[package.metadata.system-deps.libadwaita_1.v1_3]
version = "1.3"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "libadwaita_sys"

[dependencies]
libc = "0.2"

[dependencies.gio]
package = "gio-sys"
version = "0.16"

[dependencies.glib]
package = "glib-sys"
version = "0.16"

[dependencies.gobject]
package = "gobject-sys"
version = "0.16"

[dependencies.gtk]
package = "gtk4-sys"
version = "0.5"

[dependencies.gdk]
package = "gdk4-sys"
version = "0.5"

[dependencies.pango]
package = "pango-sys"
version = "0.16"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = ["glib/dox", "gobject/dox", "gdk/dox", "gio/dox", "gtk/dox", "pango/dox"]
v1_1 = []
v1_2 = ["v1_1"]
v1_3 = ["v1_2"]
